--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/notes?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=Puci@k
+spring.datasource.username=YOUR_USERNAME
+spring.datasource.password=YOUR_PASSWORD
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
 server.error.include-message=always
