--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -67,7 +72,7 @@
                 <version>3.2.0</version>
                 <configuration>
                     <source>${java.version}</source>
-                    <target>${java.version}</target>
+<!--                    <target>${java.version}</target>-->
                     <show>private</show>
                 </configuration>
             </plugin>
